# mt5cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  bench_python_mt5.py
cmake/: mt5cppConfig.cmake.in
docs/: metatrader5-python-research.md
examples/: concurrent.cpp  smoke.cpp  stress.cpp  ticks.cpp
include/mt5cpp/: Mt5Client.hpp  NamedPipeTransport.hpp  Types.hpp
src/mt5cpp/: Mt5Client.cpp  NamedPipeTransport.cpp
